# study_computer_science

./: .gitignore  2n皇后问题.cpp  2n皇后问题（自写 有问题）.cpp  K 的倍数.cpp  N个元素全排列.cpp  README.md  n皇后（自写）.cpp  一元三次方程求解.cpp  下一个排列.cpp  下落的树叶.cpp  不等式序列.cpp  二叉查找树求结点.cpp  交错01串.cpp  优雅的点.cpp  保卫方案(超时).cpp  倒水问题.cpp  八皇后问题（简单版本）.cpp  分饼干(超时).cpp  区间k大数查询.cpp  十进制转十六进制.cpp  双核处理（动态规划）.cpp  句子反转.cpp  地牢逃脱 未完成.cpp  均分硬币（错误）.cpp  堆砖块.cpp  复习前的准备.docx  天平.cpp  奇怪的表达式求值.cpp  奇数位丢弃.cpp  子集生成（增量构造法）.cpp  字符串碎片.cpp  完数.cpp  密码破译.cpp  寻找丑数.cpp  小易喜欢的数列.cpp  小易记单词.cpp  小球下落（二叉树）.cpp  工作安排.cpp  幸运数.cpp  幸运的袋子.cpp  (+48 more)
Algorithm_Exercises/: 2n皇后问题（自写 有问题）.cpp  Fibonacci数列.cpp  Huffuman树.cpp  N个球里面取M个球.cpp  O(1)时间复杂度删除链表节点.cpp  ProducerConsumer.java  test.java  两种排序方法.cpp  买帽子.cpp  买苹果.cpp  买面包.cpp  二叉排序树转双向链表.cpp  二维数组打印.cpp  从尾到头打印链表.cpp  入学考试 .cpp  出栈顺序.cpp  分苹果.cpp  分饼干(另外一种超时).cpp  十六进制转八进制.cpp  十六进制转十进制.cpp  博弈问题，取小球.cpp  双核处理（递归回溯、超时）.cpp  反转链表.cpp  合并两个排序的链表.cpp  名称转换.cpp  回形取数.cpp  回文串.cpp  围棋遍历.cpp  堆棋子.（没写出来……抄的代码）.cpp  奇异数.cpp  奶牛编号.cpp  子集生成（位向量法）.cpp  字符串全排列.cpp  字符串分割（未完成）.cpp  字节跳动墙壁思考题.cpp  密文搜索.cpp  密码等级（未完成）.cpp  度度熊回家.cpp  房间分配.cpp  抛硬币（超时）.cpp  (+42 more)
Document/: C++复习.docx  一些概念.docx  一些面试可能会问的算法题.docx  错题整理（主要以C++为主）.docx
Graph/: CC.java  DepthFirstSearch.java  Diagraph.java  DijkstraSP.java  DirectedCycle.java  DirectedDFS.java  DirectedEdge.java  EdgeWeightedDiagraph.java  EdgeWeightedGraph.java  Graph.java  KosarajuSCC.java  Topological.java  test.java
Learn_CSAPP/: gcc处理变长栈帧.s  (+8 more)
Learn_Rust/rust_servers_services_and_apps/chapter3RESTful_server/eztutors/tutor-nodb/: Cargo.toml
(+1932 files in other folders)
